...
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="BGT-T7-y98">
                                        <rect key="frame" x="28" y="101.5" width="319" height="267"/>
                                        <subviews>
                                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LoginIcon-1" translatesAutoresizingMaskIntoConstraints="NO" id="ifR-s5-VH6">
                                                <rect key="frame" x="97.5" y="0.0" width="124" height="124"/>
                                                <accessibility key="accessibilityConfiguration" identifier="AppIcon"/>
                                                <gestureRecognizers/>
                                                <constraints>
                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="100" id="SaF-ud-0TC"/>
                                                    <constraint firstAttribute="height" priority="999" constant="124" id="kyF-Kk-JKe"/>
                                                    <constraint firstAttribute="width" secondItem="ifR-s5-VH6" secondAttribute="height" multiplier="1:1" id="rG9-Bp-NcU"/>
                                                </constraints>
...
                        <constraints>
                            <constraint firstItem="A5Y-lg-SGY" firstAttribute="top" secondItem="Xzw-xM-LDP" secondAttribute="top" constant="12" id="G5j-Iv-dFR"/>
                            <constraint firstItem="A5Y-lg-SGY" firstAttribute="trailing" secondItem="Xzw-xM-LDP" secondAttribute="trailing" constant="-12" id="Yuh-B4-9Pc"/>
                            <constraint firstItem="A5Y-lg-SGY" firstAttribute="leading" secondItem="Xzw-xM-LDP" secondAttribute="leading" constant="12" id="y2x-MC-z3L"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Title" id="OuM-cM-aZh">
                        <barButtonItem key="rightBarButtonItem" title="Info" image="Info" id="qcI-kD-uog">
                            <connections>
                                <action selector="toggleInfo:" destination="yk0-ji-daD" id="QKz-wj-d0n"/>
                            </connections>
                        </barButtonItem>
                        <connections>
                            <outlet property="titleView" destination="XVt-QL-Hgg" id="eyi-s4-G3b"/>
...
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="xOz-zE-CJl" userLabel="First Responder" sceneMemberID="firstResponder"/>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="XVt-QL-Hgg">
                    <rect key="frame" x="0.0" y="0.0" width="88" height="22"/>
                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                    <accessibility key="accessibilityConfiguration" identifier="DismissModal"/>
                    <state key="normal" image="closeIndicator"/>
                    <connections>
                        <action selector="doneTapped:" destination="yk0-ji-daD" eventType="touchUpInside" id="zim-pt-Eu2"/>
                    </connections>
                </button>
            </objects>
...
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gn7-n0-uwm" customClass="GraphView" customModule="Obsidian" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="125" width="375" height="215"/>
                                        <color key="backgroundColor" red="0.58054409898477155" green="0.58054409898477155" blue="0.58054409898477155" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Graph View"/>
                                        <constraints>
                                            <constraint firstAttribute="height" secondItem="gn7-n0-uwm" secondAttribute="width" multiplier="8.6:15" id="UOc-Gg-2Z9"/>
                                        </constraints>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                <real key="value" value="4"/>
...
