...
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="36"/>
                                                <color key="textColor" red="0.20806234137055835" green="0.20806234137055835" blue="0.20806234137055835" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lMi-mb-zrh">
                                                <rect key="frame" x="345" y="0.0" width="76" height="67"/>
                                                <accessibility key="accessibilityConfiguration" identifier="PositionPriceLabel"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                                <state key="normal" title="0.00"/>
                                                <connections>
                                                    <action selector="showSymbol:" destination="6lf-GE-2bl" eventType="touchUpInside" id="9lh-lg-Tav"/>
                                                </connections>
                                            </button>
...
